# OpenGLRasterizer

./: CMakeLists.txt  README.md  main.cpp
Assets/Shaders/: FragmentShader.glsl  VertexShader.glsl
libs/: glad.c
libs/include/glad/: glad.h
src/: GLShader.cpp  GLShader.h  GLTransform.h  main.cpp
